In opinion articles, correct vertical alignment of 'Add to myFT' button with topic title (#2553)
🐿 v2.5.16

--- a/themes/_branded.scss
+++ b/themes/_branded.scss
@@ -45,6 +45,7 @@
 .topper--opinion {
 	.n-myft-ui--follow {
 		margin-left: 20px;
+		vertical-align: bottom;
 	}
 	.topper__opinion-genre {
 		@include oTypographySans(2);
